# byor-redislike

./: .gitignore  README.md  pyproject.toml
byor/: client.py  main.py  protocol.py  server.py
src/byor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
